# SubhamTwoRoads

./: README.md
MIDTERM/midterm/: .gitignore  CMakeLists.txt  Jamroot.jam  Monitor_TradeMismatch.sh  README.md
MIDTERM/midterm/Data_Generator/: abc.sh  auto_daily_data_generator.sh  auto_merger.sh  cash_data_gen.sh  cd_fut_data_gen.sh  cd_opt_data_gen.sh  date_wise_data_generator.sh  fut_data_gen.sh  gen_adjusted_data.sh  hist_data_gen.sh  multi_date_data_generator.sh  opt_data_gen.sh  weekly_opt_data_gen.sh
MIDTERM/midterm/Execs/: CMakeLists.txt  Jamfile.jam  backadjustment_exec.cpp  base_modify_exec_logic_for_live.hpp  base_modify_exec_logic_for_sim.hpp  console_multi_product_expiry.cpp  console_trader_midterm.cpp  historical_data_generator_cash.cpp  historical_data_generator_cash_new.cpp  historical_data_generator_cash_new_adjust_bhavcopy.cpp  historical_data_generator_fut.cpp  historical_data_generator_options.cpp  historical_data_generator_weeklyoptions.cpp  midterm_data_server.cpp  multi_prod_smart_console_trader.cpp  nse_exec_logic_helper_for_live.hpp  nse_exec_logic_helper_for_sim.hpp  nse_given_notional_tradeinit.cpp  nse_trade_given_notional.cpp  option_data_and_order_server.cpp  smart_console_trader.cpp
MIDTERM/midterm/GeneralizedLogic/: base_modify_exec_logic.hpp  constants.hpp  nse_exec_logic_helper.hpp  nse_exec_logic_order_reader.hpp  nse_exec_logic_order_reader_from_TCP.hpp  nse_exec_logic_order_reader_from_file.hpp  nse_exec_logic_order_reader_from_file_for_live.hpp  nse_exec_logic_order_reader_from_file_for_sim.hpp  nse_execution_listener.hpp  nse_execution_listener_manager.hpp  nse_generalized_execution_logic.hpp  nse_risk_manager.hpp  nse_simple_exec_logic.hpp  nse_simple_exec_param.hpp  nse_synthetic_leg_exec_logic.hpp  paths.hpp
MIDTERM/midterm/GeneralizedLogicCode/: Jamfile.jam  nse_exec_logic_order_reader.cpp  nse_exec_logic_order_reader_from_TCP.cpp  nse_exec_logic_order_reader_from_file.cpp  nse_simple_exec_logic.cpp  nse_simple_exec_param.cpp  (+1 more)
(+14406 files in other folders)
